--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -63,6 +63,7 @@ $clr-base-row-height-m: var(--clr-base-row-height-m);
 $clr-base-row-height-l: var(--clr-base-row-height-l);
 $clr-base-row-height-20: var(--clr-base-row-height-20);
 $clr-base-dg-row-height: var(--clr-base-dg-row-height);
+$clr-base-dg-compact-row-height: var(--clr-base-dg-compact-row-height);
 
 $clr-base-gap-xs: var(--clr-base-gap-xs);
 $clr-base-gap-s: var(--clr-base-gap-s);
