--- a/projects/angular/src/forms/styles/_number-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_number-input.clarity.scss
@@ -9,6 +9,7 @@
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
 @use '@cds/core/tokens/tokens.scss' as tokens;
+@use '../../layout/density' as density;
 @use 'sass:selector';
 
 @include mixins.exports('forms.number-input') {
@@ -29,14 +30,17 @@
 
       &-separator {
         background: tokens.$cds-alias-object-border-color;
-        width: tokens.$cds-global-space-1;
+        width: tokens.$cds-alias-object-border-width-100;
         height: tokens.$cds-global-space-7;
       }
     }
 
     .clr-input-group-icon-action {
-      @include mixins.equilateral(calc(tokens.$cds-global-space-9 - tokens.$cds-alias-object-border-width-200));
-      padding: 0 tokens.$cds-global-space-3;
+      height: calc(forms-variables.$clr-forms-input-wrapper-height - tokens.$cds-alias-object-border-width-200);
+      padding: 0 density.$clr-base-horizontal-offset-xs;
+      display: flex;
+      align-items: center;
+
       &:hover {
         background-color: tokens.$cds-alias-object-interaction-background-hover;
       }
