fix: update to latest spec

--- a/projects/angular/src/timeline/_properties.timeline.scss
+++ b/projects/angular/src/timeline/_properties.timeline.scss
@@ -25,6 +25,6 @@
     --clr-timeline-step-title-font-weight: #{tokens.$cds-alias-typography-font-weight-semibold};
     --clr-timeline-icon-size: #{density.$clr-base-icon-size-3xl};
 
-    --clr-timeline-step-internal-spacing: #{density.$clr-base-layout-space-s}; // internal property cannot be exposed
+    --clr-timeline-step-internal-spacing: #{density.$clr-base-vertical-offset-l}; // internal property cannot be exposed
   }
 }
