--- a/projects/angular/src/timeline/_variables.timeline.scss
+++ b/projects/angular/src/timeline/_variables.timeline.scss
@@ -6,6 +6,7 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
+@use '../layout/density/' as density;
 
 $clr-timeline-line-color: var(--clr-timeline-line-color) !default;
 $clr-timeline-step-header-color: var(--clr-timeline-step-header-color) !default;
@@ -22,6 +23,7 @@ $clr-timeline-icon-size: var(--clr-timeline-icon-size);
 $clr-timeline-default-icon-size: #{tokens.$cds-global-space-7};
 $clr-timeline-line-thickness: #{tokens.$cds-alias-object-border-width-200};
 $clr-timeline-step-internal-spacing: var(--clr-timeline-step-internal-spacing);
+$clr-timeline-step-internal-gap: #{density.$clr-base-gap-m};
 
 // body (title)
 $clr-timeline-step-title-font-weight: var(--clr-timeline-step-title-font-weight);
