--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -70,10 +70,10 @@
     --clr-datagrid-detail-pane-bg-color: #{tokens.$cds-alias-object-container-background};
     --clr-datagrid-detail-pane-border-color: #{tokens.$cds-alias-object-border-color};
 
-    --clr-datagrid-placeholder-font-size: #{tokens.$cds-alias-typography-section-font-size};
-    --clr-datagrid-placeholder-font-weight: #{tokens.$cds-alias-typography-section-font-weight};
-    --clr-datagrid-placeholder-line-height: #{tokens.$cds-alias-typography-section-line-height};
-    --clr-datagrid-placeholder-letter-spacing: #{tokens.$cds-alias-typography-section-letter-spacing};
+    --clr-datagrid-placeholder-font-size: #{density.$clr-base-typography-font-size-default};
+    --clr-datagrid-placeholder-font-weight: #{tokens.$cds-alias-typography-font-weight-semibold};
+    --clr-datagrid-placeholder-line-height: #{density.$clr-base-typography-line-height-20};
+    --clr-datagrid-placeholder-letter-spacing: #{baselinePx(-0.1)};
     --clr-datagrid-placeholder-background-color: #{tokens.$cds-alias-object-container-background};
     --clr-datagrid-popovers-box-shadow: #{tokens.$cds-alias-object-shadow-100};
     --clr-datagrid-column-separator-height: calc(100% - #{tokens.$cds-global-space-5});
