--- a/projects/angular/src/forms/styles/_select.clarity.scss
+++ b/projects/angular/src/forms/styles/_select.clarity.scss
@@ -8,6 +8,7 @@
 @use '../../image/icons.clarity';
 @use '../../utils/mixins';
 @use '../../utils/variables/variables.global';
+@use '../../layout/density' as density;
 @use 'mixins.forms' as forms-mixins;
 @use 'variables.forms' as forms-variables;
 @use '@cds/core/tokens/tokens.scss';
@@ -19,7 +20,7 @@
     white-space: nowrap;
 
     select {
-      @include forms-mixins.custom-inputs(tokens.$cds-global-space-9);
+      @include forms-mixins.custom-inputs(forms-variables.$clr-forms-input-wrapper-height);
       @include forms-mixins.form-fields-appearance();
       @include mixins.generate-typography-token('SECONDARY-13-RG-EXP');
 
@@ -30,7 +31,7 @@
         @include mixins.include-slim-outline-style-form-fields();
       }
       position: relative;
-      padding: 0 calc(#{forms-variables.$clr-forms-select-caret-size} + #{forms-variables.$clr-forms-baseline} * 2) 0 #{forms-variables.$clr-forms-baseline};
+      padding: 0 density.$clr-base-icon-size-l 0 #{density.$clr-base-horizontal-offset-s};
       cursor: pointer;
 
       //Moves the :after pseudo element (arrow) to the back so that clicking over it activates
@@ -67,18 +68,17 @@
   }
 
   .clr-select-wrapper {
-    max-height: calc(4 * #{forms-variables.$clr-forms-baseline});
+    max-height: forms-variables.$clr-forms-input-wrapper-height;
     display: inline-block;
 
     &::after {
       position: absolute;
       content: '';
       @include mixins.equilateral(forms-variables.$clr-forms-select-caret-size);
-      top: calc(
-        0.5 * calc(4 * #{forms-variables.$clr-forms-baseline} - #{forms-variables.$clr-forms-select-caret-size})
-      );
-      right: forms-variables.$clr-forms-baseline;
-      margin: 0;
+      top: density.$clr-base-vertical-offset-xs;
+      right: density.$clr-base-horizontal-offset-s;
+      margin: density.$clr-base-vertical-offset-xs 0;
+      //padding: density.$clr-base-vertical-offset-m density.$clr-base-horizontal-offset-s;
       // Using mask instead of background-image so we can use the CSS properties
       // and support both light / dark themes.
       -webkit-mask: icons.generateCaretIcon();
@@ -95,7 +95,7 @@
 
   .clr-error .clr-select-wrapper::after,
   .clr-success .clr-select-wrapper::after {
-    right: calc(#{forms-variables.$clr-forms-icon-size} + #{forms-variables.$clr-forms-baseline});
+    right: calc(#{forms-variables.$clr-forms-icon-size} + #{density.$clr-base-horizontal-offset-s});
   }
 
   .clr-multiselect-wrapper {
