--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -10,6 +10,7 @@
 @use 'variables.vertical-nav' as vertical-nav-variables;
 @use '@cds/core/tokens/tokens.scss';
 @use '../tabs/tabs.clarity' as tabs;
+@use '../../layout/density' as density;
 
 @mixin vertical-nav-divider($position: 'border-top') {
   #{$position}: vertical-nav-variables.$clr-vertical-nav-trigger-divider-border-width solid
@@ -181,11 +182,11 @@
 
       //Dims
       height: vertical-nav-variables.$clr-vertical-nav-item-height;
-      padding: tokens.$cds-global-space-5 tokens.$cds-global-space-7;
+      padding: density.$clr-base-vertical-offset-m density.$clr-base-layout-space-m;
 
       cds-icon {
         margin-right: 0;
-        @include mixins.equilateral(tokens.$cds-global-space-7);
+        @include mixins.equilateral(density.$clr-base-icon-size-s);
       }
 
       &.on-collapse {
@@ -214,7 +215,7 @@
 
         //Dims
         width: vertical-nav-variables.$clr-vertical-nav-icon-size;
-        margin: tokens.$cds-global-space-5;
+        margin: density.$clr-base-layout-space-xs; //TODO: Check with UX
         align-self: center;
 
         //Others
@@ -286,7 +287,7 @@
 
       //Dims
       @include mixins.min-equilateral(vertical-nav-variables.$clr-vertical-nav-icon-size);
-      margin-right: tokens.$cds-global-space-3;
+      margin-right: density.$clr-base-gap-xs;
 
       //Others
       vertical-align: middle;
@@ -345,7 +346,7 @@
       }
 
       .nav-group-children .nav-link {
-        padding: vertical-nav-variables.$clr-vertical-nav-item-child-padding;
+        padding: vertical-nav-variables.$clr-vertical-nav-item-child-padding; //TODO: CHECK WITH UX
       }
     }
 
