--- a/projects/angular/src/layout/nav/_nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_nav.clarity.scss
@@ -9,18 +9,19 @@
 @use 'variables.subnav' as subnav-variables;
 @use '../tabs/tabs.clarity' as tabs;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density/' as density;
 
 @include mixins.exports('nav.clarity') {
   .nav {
     display: flex; //For the elements inside the nav
-    height: subnav-variables.$clr-subnav-height;
+    height: density.$clr-base-layout-space-xl;
     list-style-type: none;
     align-items: center;
     margin: 0;
     width: 100%;
     white-space: nowrap;
     box-shadow: subnav-variables.$clr-nav-shadow;
-    gap: tokens.$cds-global-space-9;
+    gap: density.$clr-base-layout-space-l;
 
     .nav-item {
       display: inline-block;
@@ -35,7 +36,8 @@
       position: relative;
       color: tabs-variables.$clr-nav-link-color;
       @include mixins.generate-typography-token('BODY-14-RG-STD');
-      padding: tokens.$cds-global-space-5 tokens.$cds-global-space-3;
+      //padding: tokens.$cds-global-space-5 tokens.$cds-global-space-3;
+      //padding: density.$clr-base-layout-space-xs density.$clr-base-layout-space-2xs;
       display: inline-block;
 
       //Clarity Buttons as .nav-links in .nav
